# Calibrador

./: CMakeLists.txt  README.md  TestSalidas.cpp  main.cpp  readPin3.cpp  resources.qrc  test_fotocelula.cpp  testexpulsion.cpp
doc/: CaliberClassifier.md  CamaraManager.md  DOBOT.md  diagrama_clases.md  fruit-caliber-classifier.md  moveit-ros2-guide.md
exe/v1.0.0/: Calibrador
exe/v1.0.0/CalibradorParams/: config.json  frutas.json  mac.lic
exe/v1.0.0/CalibradorParams/Config/: config_pos_salidas.json
exe/v1.0.0/CalibradorParams/Programs/: A.json  B.json  C.json  D.json
exe/v1.0.1/: Calibrador
exe/v1.0.2/: Calibrador  TestSensor
include/: Caliber.h  CaliberHistory.h  CalibersTable.h  CalibrationDimension.h  CalibrationProgram.h  ExpulsionManager.h  Fotocelula.h  SalidasTable.h  license.h  license_mac.h  mainwindow.h
include/Cameras/: CaliberClassifier.h  CameraManager.h  Mensaje.h  OutputManager.h
include/Dialogs/: OutputPositionsDialog.h  TestSalidasDialog.h
include/FruitColorIndexs/: ColorIndexBar.h  ColorIndexLabel.h
include/Linux/: network.h
include/OutputBoards/: OutputBoardManager.h
include/Params/: Params.h  ParamsFruta.h  ParamsGeneral.h  load_params.h
include/Widgets/: CounterWidget.h  DimensionsWidget.h  LedStrip.h
projects/DEFAULT/: private_key.rsa
src/: CaliberHistory.cpp  CalibersTable.cpp  CalibrationDimension.cpp  CalibrationProgram.cpp  SalidasTable.cpp  mainwindow.cpp
src/Cameras/: CaliberClassifier.cpp  CameraManager.cpp  Mensaje.cpp  OutputManager.cpp
src/Dialogs/: OutputPositionsDialog.cpp  TestSalidasDialog.cpp
src/FruitColorIndexs/: ColorIndexBar.cpp  ColorIndexLabel.cpp
src/OutputBoards/: OutputBoardManager.cpp
src/Params/: Params.cpp  ParamsFruta.cpp  ParamsGeneral.cpp
src/Widgets/: CounterWidget.cpp  DimensionsWidget.cpp  LedStrip.cpp
translations/: EN.qm  PT.qm  en.ts  pt.ts
